# fdkjsdk

./: .gitignore  CMakeLists.txt  log.txt
config/: config.json  config.yaml
include/: export.h  flabsdk.h  status.h
include/tasks/: io_structures.h
run/: test_sdk.cpp
src/: flabsdk.cpp
src/infer_model/: infer_model_ort.cpp  infer_model_ort.h
src/infer_modules/: base_module.h  det_module.cpp  det_module.h  postprocess_strategy.cpp  postprocess_strategy.h  preprocess_strategy.cpp  preprocess_strategy.h  seg_module.cpp  seg_module.h
src/tasks/: det_engine.cpp  det_engine.h  det_ops_utils.cpp  det_ops_utils.h  det_record_info.h  seg_engine.cpp  seg_engine.h
src/utils/: base_funcs.cpp  base_funcs.h  base_funcs.hpp  io_utils.cpp  io_utils.h  ops_utils.cpp  ops_utils.h  record_info.h  registry.cpp  registry.h
